--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,6 +17,14 @@
     <color name="white_cream">#FFF8F8</color>
     <color name="gray_soft">#F5F5F5</color>
 
+    <color name="pastel_pink">#FFF0F5</color>
+    <color name="pastel_lavender">#E6E6FA</color>
+    <color name="pastel_lavender_light">#F5F0FF</color>
+    <color name="pastel_rose">#FFD1DC</color>
+    <color name="pastel_mauve">#E0B0FF</color>
+    <color name="pastel_mauve_dark">#C895FF</color>
+    <color name="whatsapp_green">#25D366</color>
+
     <!-- COLORES FUNCIONALES -->
     <color name="primary_color">@color/pink_primary</color>
     <color name="secondary_color">@color/gold_accent</color>
@@ -28,11 +36,6 @@
     <color name="blue">#FF2196F3</color>
     <color name="gray">#FF9E9E9E</color>
     <color name="green_700">#FF2E7D32</color>
-
-    <color name="pastel_pink">#FFF0F5</color> <!-- Lavender Blush -->
-    <color name="pastel_lavender">#E6E6FA</color> <!-- Lavender -->
-    <color name="pastel_rose">#FFD1DC</color> <!-- Pastel Pink -->
-    <color name="pastel_mauve">#E0B0FF</color> <!-- Mauve -->
 
     <!-- COLORES PARA ACTIVITYADAPTER -->
     <color name="booking_color">@color/pink_primary</color>
